<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.addStory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"> <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/gray_light"
        app:cardCornerRadius="20dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:contentDescription="@string/photo_preview"
            app:srcCompat="@drawable/ic_place_holder"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/add_story_title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/upload_your_photo"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_story_title">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_margin="1dp"
                app:cardBackgroundColor="@color/gray_light"
                android:layout_weight="1"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:contentDescription="@string/icon_for_camera"
                        android:src="@drawable/ic_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_a_picture" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                app:cardBackgroundColor="@color/gray_light"
                android:layout_weight="1"
                android:layout_margin="1dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="49dp"
                        android:layout_height="49dp"
                        android:contentDescription="@string/icon_for_gallery"
                        android:src="@drawable/ic_gallery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_from_gallery" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text_border"
            android:gravity="top|start"
            android:hint="@string/write_your_story_here"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.hakif.StoryApp.ui.customView.MyButton
            android:id="@+id/btn_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_rounded"
            android:text="@string/post"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_description" />

        <com.hakif.StoryApp.ui.customView.MyButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red_light"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_post" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>