<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.auth.signIn.SignInActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_fileName="sign_in_anim.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/input_your_email"
            android:textColorHint="@color/gray"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="16dp"
            android:autofillHints="username"
            android:textSize="14sp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.hakif.StoryApp.ui.customView.PassEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/poppins"
            android:hint="@string/input_your_password"
            android:textColorHint="@color/gray"
            android:layout_marginTop="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="16dp"
            android:autofillHints="password"
            android:textSize="14sp"
            android:inputType="textPassword" />

        <com.hakif.StoryApp.ui.customView.MyButton
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_in"
            android:textColor="@color/white"
        />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_with_google" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>