<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hakif.StoryApp.ui.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_to_logOut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_to_maps"
        android:orderInCategory="100"
        android:title="@string/action_to_maps"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom" />
</menu>